k8s/k3s/rancher/ingress/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.devcraft.app`) # change to your domain
      kind: Rule
      services:
        - name: rancher
          port: 443
          scheme: https
      middlewares:
        - name: default-headers
  tls:
    secretName: devcraft-tls # change to your cert name
